--- a/My_CPP02/ex03/test.ipynb
+++ b/My_CPP02/ex03/test.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "e53a670a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd # type: ignore\n",
-    "import matplotlib.pyplot as plt # type: ignore\n",
-    "from matplotlib.ticker import MultipleLocator # type: ignore\n",
-    "from matplotlib.ticker import MultipleLocator, NullFormatter # type: ignore"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.ticker import MultipleLocator\n",
+    "from matplotlib.ticker import MultipleLocator, NullFormatter"
    ]
   },
   {
